# GrafikaCmakeTemplate

./: CMakeLists.txt  title.txt
cmake/: generate_skeleton.cmake
glProgram/: CMakeLists.txt
glProgram/sources/: framework.h
glProgram/sources/GreenTriangle/: Skeleton.cpp  frag.glsl  vert.glsl
